added search box

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
       <div id="current-folder">
         
       </div>
+      <input type="search" id="search" results="5" placeholder="search">
     </div>
     <div id="main-area"></div>
   </body>
